31 Jan 1998
- fixed a resizing bug.
30 Jan 1998
- fixed an ANSI compatibility problem.
30 Jan 1998 Kyle Haight <khaight@netcom.com>
- Solaris 2.6 adjustment
30 Jan 1998 Warwick Allison <warwick@troll.no>
- character classes (removing word_characters code)
- "word" selection based on character classes
- "word" selection during selection Extend (double-click-and-drag)
- fixed bug to so that selection stays highlighted
- fixed another, more obscure selection bug 
05 Jan 1998
- improved handling of atypical or moved installations (Martin,Sven,Lars)
- a QString::printf issue resolved (Sven,Lars)
20 Dec 1998 David Faure <David.Faure@insa-lyon.fr
- "-e" added to session management
- slight overall improvements
20 Dec 1998
- fixed or worked around a marking issue in scrollUp/scrollDown.
04 Dec 1998 Alex Zepeda <garbanzo@hooked.net>
- README: Removed comment about beta testing, it's rather irrelevant.
30 Nov 1998
- added DND support
26 Nov 1998
- added xterm-83 patch, vim.schema
20 Nov 1998
- some works on integrating documentation
14 Nov 1998 Peter Silva <peter.silva@kde.org>
- added -vt_sz command line option.
- added Ctrl modifier for text selection without line breaks.
- started working on word-class (just stubs, nothing complete.)  
- documented the Ctrl-modifier, fixed section headings.
09 Nov 1998
- minor bugs fixed.
- putenv/setenv - prefered Solaris compatibility over
  a workaround for some broken gcc/clib version
04 Nov 1998
- minor bug fixes integrated
- xterm color schema added
- linux color schema added
- linux8x8.pcf.gz added
01 Nov 1998
- minor bugs fixed to handle unexpected or incomplete installations
  and broken configuration scrips better.
- FreeBSD adjustments
29 Oct 1998
- sessions reactived
- Session/Command menu additionally with Shift/Control+RightMouse
- Function keys adjusted for Linux console emulation.
- rolled linux console font
- schema for system colors added (hello Peter!)
28 Oct 1998
- tracking down licence issues