@@ -34,10 +34,10 @@ to the clipboard.
 <P>
 </LI>
 <LI>Keyboard
-<P>The Shift-PageUp and Shift-PageDown keys are used to scroll through
-the history buffer. All other keystrokes are passed on to the 
-application run within the emulation. Note that their might be
-some dead keys.
+<P>The Shift-PageUp, Shift-PageDown, Shift-Up and Shift-Down keys are
+used to scroll through the history buffer. All other keystrokes are
+passed on to the application run within the emulation. Note that their
+might be some dead keys.
 <P>
 </LI>
 <LI>Mouse
