@@ -1,3 +1,5 @@
+01 Feb 1999 Matt Gerassimoff <mg@s303.msoe.edu>
+- scroll line wise through the history buffer using Shift-Up/Down
 31 Jan 1998
 - fixed a resizing bug.
 30 Jan 1998
